--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,5 @@
-# ASP.NET Core
-# Build and test ASP.NET Core projects targeting .NET Core.
-# Add steps that run tests, create a NuGet package, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
 trigger:
-- master
+- cicd
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -14,9 +9,9 @@ variables:
 
 steps:
 - task: UseDotNet@2
+  displayName: Install DotNet
   inputs:
     version: 3.1.x
-
 
 - task: DotNetCoreCLI@2
   displayName: Build
