--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,11 +31,20 @@ stages:
           projects: 'src/MudBlazor.UnitTests/MudBlazor.UnitTests.csproj'
           testRunTitle: 'UnitTest'
 
+      - task: PowerShell@2
+        displayName: Update Version
+        inputs:
+          targetType: 'inline'
+          script: |
+            $version = ([xml](Get-Content .\MudBlazor.csproj)).Project.PropertyGroup.Version;
+            $version = $version + "-preview." + $(Build.BuildNumber)';
+            Write-Output "##vso[task.setvariable variable=version;isOutput=true]$version";
       - task: DotNetCoreCLI@2
+        displayName: Pack
         inputs:
           command: 'pack'
           packagesToPack: 'src/MudBlazor/MudBlazor.csproj'
-          buildProperties: '-p:VersionSuffix -preview.$(Build.BuildNumber)'
+          buildProperties: '-p:Version=$(version)'
 
 - stage: Approval
   jobs:
