--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,8 +45,9 @@ stages:
         displayName: Pack
         inputs:
           command: 'pack'
+          configuration:
           packagesToPack: 'src/MudBlazor/MudBlazor.csproj'
-          buildProperties: '-c $(buildConfiguration) -p:Version=$(version)'
+          buildProperties: '/p:Configuration=$(buildConfiguration) /p:Version=$(version)'
 
 - stage: Approval
   jobs:
