--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,9 +53,9 @@ stages:
         displayName: Pack
         inputs:
           command: 'pack'
-          configuration: $(buildConfiguration)
+          configuration: '$(buildConfiguration)'
           packagesToPack: 'src/MudBlazor/MudBlazor.csproj'
-          buildProperties: ' /p:Version=$(version)'
+          buildProperties: '/p:Version=$(version)'
 
 - stage: Approval
   jobs:
